# OpenFace

./: CMakeLists.txt  OpenFace.sln  README.md
OSC_Examples/Processing/openFace_OSC/: openFace_OSC.pde
OSC_Examples/Touchdesigner/: OpenFaceOSC.toe
exe/FaceLandmarkVid/: CMakeLists.txt  FaceLandmarkVid.cpp  FaceLandmarkVid.vcxproj
exe/FaceLandmarkVidMulti/: CMakeLists.txt  FaceLandmarkVidMulti.cpp  FaceLandmarkVidMulti.vcxproj
exe/FeatureExtraction/: FeatureExtraction.cpp
lib/local/LandmarkDetector/src/: LandmarkDetectorUtils.cpp
lib/local/OSC_Transmitter/: CMakeLists.txt  OSC_Transmitter.cpp  OSC_Transmitter.h  OSC_Transmitter.vcxproj  OSC_Transmitter.vcxproj.filters  ReadMe.txt  oscpack.lib
